tests/neg/i14772.check
-- [E044] Cyclic Error: tests/neg/i14772.scala:7:7 ---------------------------------------------------------------------
7 |    foo(a)    // error
  |       ^
  |       Overloaded or recursive method impl needs return type
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i14772.scala:8:12 ----------------------------------------------------------------------------------
8 |    Expr(())  // error
  |            ^
  |         no given instance of type quoted.ToExpr[Unit] was found for parameter x$2 of method apply in object Expr.
  |         I found:
  |
  |             quoted.ToExpr.IntToExpr[T]
  |
  |         But given instance IntToExpr in object ToExpr does not match type quoted.ToExpr[Unit].
